deployment/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-nginx-npm
  labels:
    app: demo-nginx-npm
spec:
  replicas: 2
  selector:
    matchLabels:
      app: demo-nginx-npm
  template:
    metadata:
      labels:
        app: demo-nginx-npm
    spec:
      containers:
      - name: demo-nginx-npm
        image: docker-registry.default.svc:5000/demo-nginx-npm/demo-nginx-npm
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
        - containerPort: 5000
