deployment/route.yaml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: demo-nginx-npm
  name: demo-nginx-npm
spec:
  host: 172.31.7.130
  port:
    targetPort: nginx-port
  to:
    kind: Service
    name: demo-nginx-npm
